--- a/block1.html
+++ b/block1.html
@@ -1,2 +1,7 @@
+<style>
+  body {
+    height: 3000px;
+  }
+</style>
 <input id="search-input" type="text" name="text" value="">
 <script src="block1.js"></script>
